RESOLVED FIXED91156
Fix QtWebKit build with OpenGLES after GC3D/E3D refactor
https://bugs.webkit.org/show_bug.cgi?id=91156
Summary Fix QtWebKit build with OpenGLES after GC3D/E3D refactor
Lauro Moura Maranhao Neto
Reported 2012-07-12 15:30:25 PDT
After r122250 the Qt port fails to build with several errors. A partial fix was landed in 91030. Already working on this.
Attachments
Patch (11.71 KB, patch)
2012-07-12 16:18 PDT, Lauro Moura Maranhao Neto
no flags
Patch for landing (11.88 KB, patch)
2012-07-12 17:37 PDT, Lauro Moura Maranhao Neto
no flags
Lauro Moura Maranhao Neto
Comment 1 2012-07-12 16:18:44 PDT
Noam Rosenthal
Comment 2 2012-07-12 16:47:50 PDT
Comment on attachment 152089 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=152089&action=review This looks good to me, but before landing I want to understand why reshapeFBOs was removed in the first place. > Source/WebCore/platform/graphics/opengl/Extensions3DOpenGLES.cpp:73 > + // unsupported Call notImplemented() instead of a comment.
Lauro Moura Maranhao Neto
Comment 3 2012-07-12 17:37:22 PDT
Created attachment 152108 [details] Patch for landing
Joshua Netterfield
Comment 4 2012-07-13 07:03:31 PDT
I thought that reshapeFBOs was BlackBerry-specific because in our downstream repo it was blocked by '#if PLATFORM(BLACKBERRY)'. Sorry about that.
WebKit Review Bot
Comment 5 2012-07-13 08:52:10 PDT
Comment on attachment 152108 [details] Patch for landing Clearing flags on attachment: 152108 Committed r122586: <http://trac.webkit.org/changeset/122586>
WebKit Review Bot
Comment 6 2012-07-13 08:52:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.